Implemented list view filtering by nationality

--- a/Nine/Info.plist
+++ b/Nine/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>MBXAccessToken</key>
 	<string>pk.eyJ1IjoidGhhb2x5bmdvIiwiYSI6ImNsZW43ZDNqZTE4cXMzcm5oamU5cXM1eTIifQ.YOrnBSD-avGEriAFfE6X3Q</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
