Implemented features tap & description view

--- a/Nine/Info.plist
+++ b/Nine/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Nine uses your location to help you find great Asian-owned businesses nearby.</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>comgooglemaps</string>
+	</array>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 	<key>MBXAccessToken</key>
 	<string>pk.eyJ1IjoidGhhb2x5bmdvIiwiYSI6ImNsZW43ZDNqZTE4cXMzcm5oamU5cXM1eTIifQ.YOrnBSD-avGEriAFfE6X3Q</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
