--- a/Nine/Info.plist
+++ b/Nine/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Helvetica-Black.ttf</string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Nine uses your location to help you find great Asian-owned businesses nearby.</string>
 	<key>LSApplicationQueriesSchemes</key>
